--- a/Login form/style.css
+++ b/Login form/style.css
@@ -75,8 +75,8 @@ body {
   width: 50vm;
   height: 65vh;
   border-radius: 12px;
-  /*box-shadow: rgba(50,50,93,0,25) 0px 13px 27px -5px, rgba(0, 0, 0, 0, 3) 0px 8px 16px -8px;*/
-  background-color: black;
+  box-shadow: rgba(50,50,93,0,25) 0px 13px 27px -5px, rgba(0, 0, 0, 0, 3) 0px 8px 16px -8px;
+  background-color: #fff;
 
 }
 h2 {
@@ -95,7 +95,8 @@ input {
   margin-top: 8px;
   padding: 12px 24px;
   width: 270px;
-  background-color: #EAEEED;
+  background-color: #000f0D;
+  color: #fff;
 }
 
 input:focus {
@@ -110,8 +111,7 @@ button {
   cursor: pointer;
   outline: none;
   border-width: 0;
-  /*  background-color: #1A1B27;
-  */
+  background-color: #1A1B27;
   font-weight: 600;
   width: 100%;
 }
@@ -139,10 +139,10 @@ button:hover {
   opacity: 0.8;
 }
 .icon {
-  background-color: #1A1B27;
+  background-color: #0fe;
   height: 10vh;
   position: bottom;
-display: flex;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
