--- a/Rotation/style.css
+++ b/Rotation/style.css
@@ -24,7 +24,7 @@ span:nth-child(1) {
   width: 220px;
   left: 6%;
   top: 6%;
-  background-color: #90caf9;
+  background-color: #f00;
   animation: ani 3s infinite;
   animation-delay: 0.3s;
 }
@@ -35,7 +35,7 @@ span:nth-child(2) {
   width: 200px;
   left: 10%;
   top: 10%;
-  background-color: #bbdefb;
+  background-color: #f90;
   animation: ani 3s infinite;
   animation-delay: 0.4s;
 }
@@ -45,7 +45,7 @@ span:nth-child(3) {
   width: 190px;
   left: 14%;
   top: 14%;
-  background-color: #e3f2fd;
+  background-color: yellow;
   animation: ani 3s infinite;
   animation-delay: 0.s;
 }
@@ -55,7 +55,7 @@ span:nth-child(4) {
   width: 160px;
   left: 18%;
   top: 18%;
-  background-color: #90caf9;
+  background-color: #0f5;
   animation: ani 3s infinite;
   animation-delay: 0.6s;
 }
@@ -65,7 +65,7 @@ span:nth-child(5) {
   width: 140px;
   left: 22%;
   top: 22%;
-  background-color: #e3f2fd;
+  background-color: #0ff;
   animation: ani 3s infinite;
   animation-delay: 0.7s;
 }
@@ -75,7 +75,7 @@ span:nth-child(6) {
   width: 120px;
   left: 26%;
   top: 26%;
-  background-color: #90caf9;
+  background-color: #90ca;
   animation: ani 3s infinite;
   animation-delay: 0.8s;
 }
@@ -85,7 +85,7 @@ span:nth-child(7) {
   width: 100px;
   left: 30%;
   top: 30%;
-  background-color: #bbdefb;
+  background-color: #9f0;
   animation: ani 3s infinite;
   animation-delay: 1s;
 }
