--- a/Loading/Bubbles/style.css
+++ b/Loading/Bubbles/style.css
@@ -28,7 +28,7 @@ body {
   z-index: 2;
   height: 20px;
   width: 20px;
-  background: #ffffff80;
+  background: #ffffff80
   border-radius: 50%;
   transform: translate(4px, 3px);
 }
@@ -60,6 +60,6 @@ body {
 @keyframes in-out {
   50% {
     scale: 1.5;
-    transform: translate(0 45px);
+    transform: translate(0 -45px);
   }
 }
