--- a/Responsive login/style.css
+++ b/Responsive login/style.css
@@ -5,26 +5,27 @@
 }
 body {
   background-image: linear-gradient(45deg, #21D4FD 8%, #B721FF 100%);
-  height: 150vh;
+  height: 100vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 .container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   width: 50vm;
   height: 65vh;
-  border-radius: 12px;
-  background-color: #0f0;
-  padding: 20px 30px;
+  padding: 20px;
 }
 .form {
   display: flex;
+  flex-grow: 1;
+  flex-basis: 200;
   justify-content: center;
-  padding: 150px;
+  padding: 90px;
   flex-wrap: wrap;
   gap: 1rem;
 
